--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Cloud Native Data Workshop
 site_description: Cloud Native Data Workship
 site_author: Jeffrey Gillan
-site_url: https://www.gillanscience.com/cloud_native_geospatial
+site_url: https://jeffgillan.github.io/cloud_native_geospatial
 
 # Repository
 repo_name: cloud_native_geospatial
