--- a/requirements_mkdocs.txt
+++ b/requirements_mkdocs.txt
@@ -11,7 +11,6 @@ tox
 twine
 watchdog
 wheel
-mkdocs
 mkdocs-git-revision-date-plugin 
 mkdocs-jupyter 
 mkdocs-material 
@@ -19,5 +18,16 @@ mkdocs-pdf-export-plugin
 mkdocstrings 
 mkdocstrings-crystal
 mkdocstrings-python-legacy
-pygments>=2.10,<2.12
-pymdown-extensions<9.4
+
+# Requirements for core
+jinja2>=3.0
+markdown>=3.2
+mkdocs>=1.4.2
+mkdocs-material-extensions>=1.1
+pygments>=2.14
+pymdown-extensions>=9.9.1
+
+# Requirements for plugins
+colorama>=0.4
+regex>=2022.4.24
+requests>=2.26
