--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -3,7 +3,8 @@ on:
   push:
     branches:
       - main
-
+permissions:
+  contents: write
 jobs:
   build:
     name: Deploy docs
@@ -13,6 +14,10 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.9
+      - uses: actions/cache@v2
+        with:
+          key: ${{ github.ref }}
+          path: .cache
       - name: run requirements file
         run:  pip install -r requirements_mkdocs.txt 
       - name: Deploy docs
