--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: Cloud Native Data Workshop
-site_description: Cloud Native Data Workship
+site_name: Cloud Native Geospatial
+site_description: Cloud Native Geospatial
 site_author: Jeffrey Gillan
 site_url: https://jeffgillan.github.io/cloud-native-geospatial
 
