--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ copyright: 'License CC by 4.0'
 nav:
   - Introduction: index.md
   - Vectors:
+    - Flatgeobuf: flatgeobuf.md
     - GeoJSON: geojson.md
     - Cloud Optimized Point Clouds: copc.md
   - Rasters:
